macro/tests/fails/not_enough.stderr
error: Not enough input parameters for this format string
 --> $DIR/not_enough.rs:7:9
  |
7 |         "Before first - {}, then - {:?}, or even {{this}}: {:b}!"
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
